--- a/demo/src/main/resources/templates/admin.html
+++ b/demo/src/main/resources/templates/admin.html
@@ -18,7 +18,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>Sign In (관리자 페이지)</h3>
+                <h3>Sign In (Admin Page)</h3>
             </div>
             <div class="card-body">
                 <form method="post" th:action="@{adminLoginAction}">
@@ -44,7 +44,7 @@
             <div class="card-footer">
 
                 <div class="d-flex justify-content-center links">
-                    관리자 로그인<a th:href="@{/AM}">일반 유저 로그인</a>
+                    Admin Login<a th:href="@{/AM}">Login for user</a>
                 </div>
             </div>
         </div>
