--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>AM_CRM</title>
+  <meta charset="UTF-8">
+  <title>AM_CRM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -27,8 +27,8 @@
         <div class="dropdown">
           <a href="#" class="dropdown-toggle navbar-brand brand-logo-mini" data-bs-toggle="dropdown"><img src="/images/logo-mini.svg" alt="logo" /> </a>
           <div class="dropdown-menu">
-            <a th:href="@{main}" class="dropdown-item">고객 정보 목록</a>
-            <a th:href="@{home}" class="dropdown-item">고객 정보 등록</a>
+            <a th:href="@{main}" class="dropdown-item">User Info List</a>
+            <a th:href="@{home}" class="dropdown-item">Add New User Info</a>
           </div>
         </div>
       </div>
@@ -43,11 +43,11 @@
   <ul class="navbar-nav navbar-nav-right">
 
     <div th:if="${authority == 'user'}">
-      <li><a th:href="@{logoutAction}" class="nav-link" >로그아웃</a></li>
+      <li><a th:href="@{logoutAction}" class="nav-link" >Logout</a></li>
     </div>
 
     <div th:if="${authority == 'admin'}">
-      <li><a th:href="@{adminLogoutAction}" class="nav-link" >로그아웃</a></li>
+      <li><a th:href="@{adminLogoutAction}" class="nav-link" >Logout</a></li>
     </div>
 
   </ul>
@@ -77,14 +77,14 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{main}">
-          <span class="menu-title" style = "font-size : 15px;">고객 정보 목록</span>
+          <span class="menu-title" style = "font-size : 15px;">User Info List</span>
           <i class="mdi mdi-home menu-icon"></i>
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" th:href="@{home}">
-          <span class="menu-title" style = "font-size : 15px;">고객 정보 등록</span>
+          <span class="menu-title" style = "font-size : 15px;">Add New User Info</span>
           <i class="mdi mdi-format-list-bulleted menu-icon"></i>
         </a>
       </li>
@@ -95,7 +95,7 @@
   <div class="main-panel" style="height:1500px;">
     <div class="content-wrapper">
       <div class="page-header">
-        <h3 class="page-title" id ="customer-info"> 고객 정보 입력 </h3>
+        <h3 class="page-title" id ="customer-info"> Add New User Info </h3>
       </div>
       <div class="row">
         <div class="col-12" >
@@ -105,7 +105,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">사업분류</label>
+                      <label class="col-sm-3 col-form-label">sector</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="sector"/>
                       </div>
@@ -113,7 +113,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">공급사</label>
+                      <label class="col-sm-3 col-form-label">provider</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="provider"/>
                       </div>
@@ -124,7 +124,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">설치날짜</label>
+                      <label class="col-sm-3 col-form-label">installed date</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="installDate"/>
                       </div>
@@ -132,7 +132,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">서비스번호</label>
+                      <label class="col-sm-3 col-form-label">service number</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="serviceNum"/>
                       </div>
@@ -143,7 +143,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">고객사명</label>
+                      <label class="col-sm-3 col-form-label">customer</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="customer"/>
                       </div>
@@ -151,7 +151,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">참고사항</label>
+                      <label class="col-sm-3 col-form-label">notes</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="notes"/>
                       </div>
@@ -162,7 +162,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">접속IP</label>
+                      <label class="col-sm-3 col-form-label">ip</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="ip"/>
                       </div>
@@ -170,7 +170,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">모델타입</label>
+                      <label class="col-sm-3 col-form-label">model type</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="modelType"/>
                       </div>
@@ -181,7 +181,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">시리얼넘버</label>
+                      <label class="col-sm-3 col-form-label">serial number</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="serialNum"/>
                       </div>
@@ -189,7 +189,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">버전</label>
+                      <label class="col-sm-3 col-form-label">version</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="version"/>
                       </div>
@@ -200,7 +200,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">계정</label>
+                      <label class="col-sm-3 col-form-label">account</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="account"/>
                       </div>
@@ -208,7 +208,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">DDNS</label>
+                      <label class="col-sm-3 col-form-label">ddns</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="ddns"/>
                       </div>
@@ -219,7 +219,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">주소지</label>
+                      <label class="col-sm-3 col-form-label">address</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="address"/>
                       </div>
@@ -228,7 +228,7 @@
 
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">계약유형</label>
+                      <label class="col-sm-3 col-form-label">contract type</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="contractType"/>
                       </div>
@@ -238,7 +238,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">라이선스</label>
+                      <label class="col-sm-3 col-form-label">license</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="license"/>
                       </div>
@@ -247,7 +247,7 @@
 
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">담당자</label>
+                      <label class="col-sm-3 col-form-label">manager</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="marker"/>
                       </div>
@@ -257,7 +257,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group row">
-                        <label class="col-sm-3 col-form-label">영업대표</label>
+                        <label class="col-sm-3 col-form-label">salesman</label>
                         <div class="col-sm-9">
                           <input type="text" class="form-control" name="respon"/>
                         </div>
@@ -269,7 +269,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">최근사항</label>
+                        <label class="col-sm-0 col-form-label">recent</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="recent"></textarea>
@@ -282,7 +282,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">장애사항</label>
+                        <label class="col-sm-0 col-form-label">errors</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="error"></textarea>
@@ -295,7 +295,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">기타사항</label>
+                        <label class="col-sm-0 col-form-label">etc.</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="etc"></textarea>
@@ -304,8 +304,8 @@
                     </div>
                   </div>
                   <div class="row" id = "submit-row">
-<!--                    <button type="submit" class="btn btn-light" id="submit-button"> 제출 </button>-->
-                    <input class="btn btn-light" id="submit-button" type="submit" value="제출">
+                    <!--                    <button type="submit" class="btn btn-light" id="submit-button"> 제출 </button>-->
+                    <input class="btn btn-light" id="submit-button" type="submit" value="submit">
                   </div>
                 </div>
               </form>
