--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -15,48 +15,48 @@
 
 </head>
 <body>
-    <div class="container">
-        <div class="d-flex justify-content-center h-100">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Sign In</h3>
-                </div>
-                <div class="card-body">
-                    <form method="post" th:action="@{AM/loginAction}">
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-user"></i></span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="username" name="userId" maxlength="255">
-
-                        </div>
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-key"></i></span>
-                            </div>
-                            <input type="password" class="form-control" placeholder="password" name="userPassword" maxlength="255">
-                        </div>
-                        <span style="font-size : 15px; font-style: bold; color: red;">[[${loginCheck}]]</span>
-
-                        <div class="form-group" id="login">
-                            <input type="submit" value="Login" class="btn float-right login_btn">
-                        </div>
-
-                    </form>
-                </div>
-                <div class="card-footer">
-                    <div class="d-flex justify-content-center links">
-                        Don't have an account?<a th:href="@{AM/signUp}">Sign Up</a>
-                    </div>
-                    <div class="d-flex justify-content-center links">
-                        관리자 로그인<a th:href="@{AM/adminLogin}">관리자 전용 로그인</a>
-                    </div>
-                </div>
-
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3>Sign In</h3>
             </div>
+            <div class="card-body">
+                <form method="post" th:action="@{AM/loginAction}">
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="username" name="userId" maxlength="255">
+
+                    </div>
+                    <div class="input-group form-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-key"></i></span>
+                        </div>
+                        <input type="password" class="form-control" placeholder="password" name="userPassword" maxlength="255">
+                    </div>
+                    <span style="font-size : 15px; font-style: bold; color: red;">[[${loginCheck}]]</span>
+
+                    <div class="form-group" id="login">
+                        <input type="submit" value="Login" class="btn float-right login_btn">
+                    </div>
+
+                </form>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center links">
+                    Don't have an account?<a th:href="@{AM/signUp}">Sign Up</a>
+                </div>
+                <div class="d-flex justify-content-center links">
+                    Admin Login<a th:href="@{AM/adminLogin}">Login for Admin</a>
+                </div>
+            </div>
+
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+</div>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 </body>
 </html>
