--- a/demo/src/main/resources/templates/main.html
+++ b/demo/src/main/resources/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="shortcut icon" href="/images/favicon.ico"/>
   <link rel="stylesheet" href="/css/home.css">
-    <title>Title</title>
+  <title>Title</title>
 </head>
 <body>
 <div class="container-scroller">
@@ -23,8 +23,8 @@
         <div class="dropdown">
           <a th:href="@{main}" class="dropdown-toggle navbar-brand brand-logo-mini" data-bs-toggle="dropdown"><img src="/images/logo-mini.svg" alt="logo" /> </a>
           <div class="dropdown-menu">
-            <a th:href="@{main}" class="dropdown-item">고객 정보 목록</a>
-            <a th:href="@{home}" class="dropdown-item">고객 정보 등록</a>
+            <a th:href="@{main}" class="dropdown-item">User Info List</a>
+            <a th:href="@{home}" class="dropdown-item">Add New User Info</a>
           </div>
         </div>
       </div>
@@ -38,13 +38,13 @@
       </button>
       <ul class="navbar-nav navbar-nav-right" th:if="${authority == 'user'}">
 
-          <li><a th:href="@{logoutAction}" class="nav-link" >로그아웃</a></li>
+        <li><a th:href="@{logoutAction}" class="nav-link" >Logout</a></li>
 
       </ul>
 
       <ul class="navbar-nav navbar-nav-right" th:if="${authority == 'admin'}">
-        <li><a th:href="@{adminLogoutAction}" class="nav-link" >로그아웃</a></li>
-        <li><a th:href="@{adminPage}" class="nav-link" style = "margin-left : 30px;">관리자 페이지</a></li>
+        <li><a th:href="@{adminLogoutAction}" class="nav-link" >Logout</a></li>
+        <li><a th:href="@{adminPage}" class="nav-link" style = "margin-left : 30px;">AdminPage</a></li>
       </ul>
 
     </div>
@@ -70,14 +70,14 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{main}">
-            <span class="menu-title" style = "font-size : 15px;">고객 정보 목록</span>
+            <span class="menu-title" style = "font-size : 15px;">User Info List</span>
             <i class="mdi mdi-home menu-icon"></i>
           </a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" th:href="@{home}">
-            <span class="menu-title" style = "font-size : 15px;">고객 정보 등록</span>
+            <span class="menu-title" style = "font-size : 15px;">Add New User Info</span>
             <i class="mdi mdi-format-list-bulleted menu-icon"></i>
           </a>
         </li>
@@ -95,7 +95,7 @@
                   <form method="post" th:action="@{searchAction}">
                     <div class="input-group" style = "width : 100%; ">
 
-                      <label class="col-sm-1 col-form-label" style = "font-size : 13px; font-style : italic;"> 공급사 </label>
+                      <label class="col-sm-1 col-form-label" style = "font-size : 13px; font-style : italic;"> supporter </label>
 
                       <select class="form-control" name="provider">
                         <option selected value = ""></option>
@@ -107,7 +107,7 @@
                         <option value = "AM네트웍스">AM네트웍스</option>
                       </select>
 
-                      <label class="col-sm-1 col-form-label" style = "font-size : 13px; font-style : italic; margin-left : 100px;">고객사명</label>
+                      <label class="col-sm-1 col-form-label" style = "font-size : 13px; font-style : italic; margin-left : 100px;">customer</label>
                       <input class="form-control py-2 border-left-0 border" type="search" name="search"/>
                       <span class="input-group-append">
                         <input class="btn btn-outline-secondary border-left-0 border" type="submit">
@@ -120,16 +120,16 @@
                       <thead>
                       <tr class="table-primary">
                         <th>NO</th>
-                        <th>사업분류</th>
+                        <th>sector</th>
                         <th></th>
-                        <th>공급사</th>
+                        <th>provider</th>
                         <th></th>
-                        <th>고객사명</th>
+                        <th>customer</th>
                         <th></th>
                         <th></th>
-                        <th>참고사항</th>
+                        <th>recent</th>
                         <th></th>
-                        <th>수정하기</th>
+                        <th>modify</th>
                         <th></th>
                       </tr>
                       </thead>
@@ -146,7 +146,7 @@
                         <td></td>
                         <td>[[${data.notes}]]</td>
                         <td></td>
-                        <td><a th:href="@{${data.id}}" class="btn btn-danger">수정</a></td>
+                        <td><a th:href="@{${data.id}}" class="btn btn-danger">Modify</a></td>
 
                         <td></td>
                       </tr>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div th:if="${authority == 'admin'}" style="display: flex;">
-            <div class="btn btn-danger" style = "font-size : 15px; font-style : bold; margin-left : 7%; height : 40px;" >수량 : [[${counts}]]</div>
+            <div class="btn btn-danger" style = "font-size : 15px; font-style : bold; margin-left : 7%; height : 40px;" >Counts : [[${counts}]]</div>
 
             <form method="post" th:action="@{excelAction}" enctype="multipart/form-data" style = "margin-left : 30%;">
               <input type="file" id="input" name="file">
@@ -176,11 +176,11 @@
   </div>
 </div>
 
-  <script src="/js/vendor.bundle.base.js"></script>
-  <script src="/js/off-canvas.js"></script>
-  <script src="/js/hoverable-collapse.js"></script>
-  <script src="/js/misc.js"></script>
-  <script src="/js/file-upload.js"></script>
+<script src="/js/vendor.bundle.base.js"></script>
+<script src="/js/off-canvas.js"></script>
+<script src="/js/hoverable-collapse.js"></script>
+<script src="/js/misc.js"></script>
+<script src="/js/file-upload.js"></script>
 
 </body>
 </html>
