--- a/demo/src/main/resources/templates/modify.html
+++ b/demo/src/main/resources/templates/modify.html
@@ -27,8 +27,8 @@
         <div class="dropdown">
           <a href="#" class="dropdown-toggle navbar-brand brand-logo-mini" data-bs-toggle="dropdown"><img src="/images/logo-mini.svg" alt="logo" /> </a>
           <div class="dropdown-menu">
-            <a th:href="@{main}" class="dropdown-item">고객 정보 목록</a>
-            <a th:href="@{home}" class="dropdown-item">고객 정보 등록</a>
+            <a th:href="@{main}" class="dropdown-item">User Info List</a>
+            <a th:href="@{home}" class="dropdown-item">Add New User Info</a>
           </div>
         </div>
       </div>
@@ -41,9 +41,9 @@
   </button>
 
   <ul class="navbar-nav navbar-nav-right">
-    <li><a th:href="@{logoutAction}" class="nav-link" >로그아웃</a></li>
+    <li><a th:href="@{logoutAction}" class="nav-link" >Logout</a></li>
 
-    <li><a th:href="@{adminPage}" class="nav-link" style = "margin-left : 30px;">관리자 페이지</a></li>
+    <li><a th:href="@{adminPage}" class="nav-link" style = "margin-left : 30px;">Admin Page</a></li>
   </ul>
   <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
     <span class="mdi mdi-menu"></span>
@@ -71,14 +71,14 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{main}">
-          <span class="menu-title" style = "font-size : 15px;">고객 정보 목록</span>
+          <span class="menu-title" style = "font-size : 15px;">User Info List</span>
           <i class="mdi mdi-home menu-icon"></i>
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" th:href="@{home}">
-          <span class="menu-title" style = "font-size : 15px;">고객 정보 등록</span>
+          <span class="menu-title" style = "font-size : 15px;">Add New User Info</span>
           <i class="mdi mdi-format-list-bulleted menu-icon"></i>
         </a>
       </li>
@@ -89,7 +89,7 @@
   <div class="main-panel" style="height:1500px;">
     <div class="content-wrapper">
       <div class="page-header">
-        <h3 class="page-title" id ="customer-info"> 고객 정보 입력 </h3>
+        <h3 class="page-title" id ="customer-info"> Add New User Info </h3>
       </div>
       <div class="row">
         <div class="col-12" >
@@ -99,7 +99,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">사업분류</label>
+                      <label class="col-sm-3 col-form-label">sector</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="sector" th:value="${byId.sector}"/>
                       </div>
@@ -107,7 +107,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">공급사</label>
+                      <label class="col-sm-3 col-form-label">provider</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="provider" th:value="${byId.provider}"/>
                       </div>
@@ -118,7 +118,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">설치날짜</label>
+                      <label class="col-sm-3 col-form-label">installed date</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="installDate" th:value="${byId.installDate}"/>
                       </div>
@@ -126,7 +126,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">서비스번호</label>
+                      <label class="col-sm-3 col-form-label">service number</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="serviceNum" th:value="${byId.serviceNum}"/>
                       </div>
@@ -137,7 +137,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">고객사명</label>
+                      <label class="col-sm-3 col-form-label">customer</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="customer" th:value="${byId.customer}"/>
                       </div>
@@ -145,7 +145,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">참고사항</label>
+                      <label class="col-sm-3 col-form-label">notes</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="notes" th:value="${byId.notes}"/>
                       </div>
@@ -156,7 +156,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">접속IP</label>
+                      <label class="col-sm-3 col-form-label">ip</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="ip" th:value="${byId.ip}"/>
                       </div>
@@ -164,7 +164,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">모델타입</label>
+                      <label class="col-sm-3 col-form-label">model type</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="modelType" th:value="${byId.modelType}"/>
                       </div>
@@ -175,7 +175,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">시리얼넘버</label>
+                      <label class="col-sm-3 col-form-label">serial number</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="serialNum" th:value="${byId.serialNum}"/>
                       </div>
@@ -183,7 +183,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">버전</label>
+                      <label class="col-sm-3 col-form-label">version</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="version" th:value="${byId.version}"/>
                       </div>
@@ -194,7 +194,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">계정</label>
+                      <label class="col-sm-3 col-form-label">account</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="account" th:value="${byId.account}"/>
                       </div>
@@ -213,7 +213,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">주소지</label>
+                      <label class="col-sm-3 col-form-label">address</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="address" th:value="${byId.address}"/>
                       </div>
@@ -222,7 +222,7 @@
 
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">계약유형</label>
+                      <label class="col-sm-3 col-form-label">contract type</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="contractType" th:value="${byId.contractType}"/>
                       </div>
@@ -232,7 +232,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">라이선스</label>
+                      <label class="col-sm-3 col-form-label">license</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="license" th:value="${byId.license}"/>
                       </div>
@@ -241,7 +241,7 @@
 
                   <div class="col-md-6">
                     <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">담당자</label>
+                      <label class="col-sm-3 col-form-label">manager</label>
                       <div class="col-sm-9">
                         <input type="text" class="form-control" name="marker" th:value="${byId.marker}"/>
                       </div>
@@ -251,7 +251,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group row">
-                        <label class="col-sm-3 col-form-label">영업대표</label>
+                        <label class="col-sm-3 col-form-label">salesman</label>
                         <div class="col-sm-9">
                           <input type="text" class="form-control" name="respon" th:value="${byId.respon}"/>
                         </div>
@@ -263,7 +263,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">최근사항</label>
+                        <label class="col-sm-0 col-form-label">recent</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="recent">[[${byId.recent}]]</textarea>
@@ -276,7 +276,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">장애사항</label>
+                        <label class="col-sm-0 col-form-label">errors</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="error">[[${byId.error}]]</textarea>
@@ -289,7 +289,7 @@
 
                     <div class="col-md-12" >
                       <div class="form-group row">
-                        <label class="col-sm-0 col-form-label">기타사항</label>
+                        <label class="col-sm-0 col-form-label">etc.</label>
                         <div class="col-sm-12">
 
                           <textarea rows = "2" cols = "60" maxlength="300" style="width:900px; height : 100px;" name="etc">[[${byId.etc}]]</textarea>
@@ -300,7 +300,7 @@
                   <input type="hidden" name="id" th:value="${id}">
                   <div class="row" id = "submit-row">
                     <!--                    <button type="submit" class="btn btn-light" id="submit-button"> 제출 </button>-->
-                    <input class="btn btn-light" id="submit-button" type="submit" value="수정">
+                    <input class="btn btn-light" id="submit-button" type="submit" value="modify">
                   </div>
                 </div>
               </form>
